chore(LUI-1041): Lint

--- a/packages/@lightningjs/ui-components/src/components/MetadataCardContent/MetadataCardContent.mdx
+++ b/packages/@lightningjs/ui-components/src/components/MetadataCardContent/MetadataCardContent.mdx
@@ -69,10 +69,10 @@ class Basic extends lng.Component {
 
 ### Style Properties
 
-| name             | type             | description                                                                              |
-| ---------------- | ---------------- | ---------------------------------------------------------------------------------------- |
-| detailsTextStyle | string \| object | text style for details                                                                   |
-| descriptiobnDetailStyle | object    | style for details                                                                        |
-| providerStyle    | object           | style properties to pass along to the [Provider](?path=/docs/components-provider--basic) |
+| name                    | type             | description                                                                              |
+| ----------------------- | ---------------- | ---------------------------------------------------------------------------------------- |
+| detailsTextStyle        | string \| object | text style for details                                                                   |
+| descriptionDetailsStyle | object           | style for descrioton details                                                                        |
+| providerStyle           | object           | style properties to pass along to the [Provider](?path=/docs/components-provider--basic) |
 
 ### Methods
