feat(MetadataContentCard): Add descriptionDetails TextBox below description in MetadataContentCard (#452)
* feat(MetadataCardContent): Add description details TextBox to metadata

* chore(LUI-1041): Lint

* fix(MetadataCardContent): Fix default values

* test(MetadataCardContent): Add tests

* fix(LUI-1041): Implement comments

* fix(LUI-1041): Implement comments

* fix(LUI-1041): Implement comments

* fix(LUI-1041): Implement comments

* chore(LUI-1041): Lint

* chore(LUI-1041): Lint

* fix:(MetadataCardContent): typo in docs

* chore(LUI-1041): Lint

* feat(MetadataCardContent): Add description details TextBox to metadata

* chore(LUI-1041): Lint

* fix(MetadataCardContent): Fix default values

* test(MetadataCardContent): Add tests

* fix(LUI-1041): Implement comments

* fix(LUI-1041): Implement comments

* fix(LUI-1041): Implement comments

* fix(LUI-1041): Implement comments

* chore(LUI-1041): Lint

* chore(LUI-1041): Lint

* fix:(MetadataCardContent): typo in docs

* test(LUI-1041): Fix tests and update snapshots

* chore(LUI-1041): Lint

* chore(LUI-1041): Lint

---------

Co-authored-by: David Richards, Jr <dbarichardsjr@gmail.com>

--- a/packages/@lightningjs/ui-components/src/components/MetadataCardContent/MetadataCardContent.mdx
+++ b/packages/@lightningjs/ui-components/src/components/MetadataCardContent/MetadataCardContent.mdx
@@ -59,18 +59,20 @@ class Basic extends lng.Component {
 
 ### Properties
 
-| name        | type                                                  | required | default   | description                                                                               |
-| ----------- | ----------------------------------------------------- | -------- | --------- | ----------------------------------------------------------------------------------------- |
-| title       | string                                                | false    | undefined | title text                                                                                |
-| description | string                                                | false    | undefined | description text directly below title                                                     |
-| details     | string                                                | false    | undefined | details text at bottom left of component                                                  |
-| provider    | [Provider](?path=/docs/components-provider--provider) | false    | undefined | an object of [Provider](?path=/docs/components-provider--provider) properties to patch in |
+| name               | type                                           | required | default   | description                                                                               |
+| -----------        | ---------------------------------------------- | -------- | --------- | ----------------------------------------------------------------------------------------- |
+| title              | string                                         | false    | undefined | title text                                                                                |
+| description        | string                                         | false    | undefined | description text directly below title                                                     |
+| descriptionDetails | string                                         | false    | undefined | details text directly below description                                                   |
+| details            | string                                         | false    | undefined | details text at bottom left of component                                                  |
+| provider           | [Provider](?path=/docs/components-provider--provider) | false    | undefined | an object of [Provider](?path=/docs/components-provider--provider) properties to patch in |
 
 ### Style Properties
 
-| name             | type             | description                                                                              |
-| ---------------- | ---------------- | ---------------------------------------------------------------------------------------- |
-| detailsTextStyle | string \| object | text style for details                                                                   |
-| providerStyle    | object           | style properties to pass along to the [Provider](?path=/docs/components-provider--basic) |
+| name                    | type             | description                                                                              |
+| ----------------------- | ---------------- | ---------------------------------------------------------------------------------------- |
+| detailsTextStyle        | string \| object | text style for details                                                                   |
+| descriptionDetailsStyle | object           | style for description details                                                            |
+| providerStyle           | object           | style properties to pass along to the [Provider](?path=/docs/components-provider--basic) |
 
 ### Methods
