fix(Title): do not render title textbox unless there is a title present

--- a/packages/@lightningjs/ui-components/src/components/TitleRow/TitleRow.mdx
+++ b/packages/@lightningjs/ui-components/src/components/TitleRow/TitleRow.mdx
@@ -69,6 +69,14 @@ supported by `Row`.
 | autoResizeHeight | boolean | false    | true      | If true, the height of the TitleRow will be set to the height of the title, vertical padding, and row |
 | title            | string  | false    | undefined | The title text to be displayed above the `Row` items                                                  |
 
+### Style Properties
+
+| name              | type             | description                           |
+| ----------------- | ---------------- | ------------------------------------- |
+| titleMarginBottom | number           | spacing between title and row         |
+| titleMarginLeft   | number           | spacing between title and left margin |
+| titleTextStyle    | string \| object | text style for title                  |
+
 ## Methods
 
 `TitleRow` can access [all public methods supported by the Row component](/docs/components-row--basic#methods)
