--- a/packages/@lightningjs/ui-components/src/components/MetadataCardContent/MetadataCardContent.mdx
+++ b/packages/@lightningjs/ui-components/src/components/MetadataCardContent/MetadataCardContent.mdx
@@ -43,7 +43,7 @@ class Basic extends lng.Component {
         w: 600,
         h: 250,
         title: 'Title',
-        subheading: "Subtitle"
+        subheading: 'Subtitle',
         description: 'Description',
         details: 'Details',
         provider: {
