--- a/packages/@lightningjs/ui-components/src/components/MetadataCardContent/MetadataCardContent.mdx
+++ b/packages/@lightningjs/ui-components/src/components/MetadataCardContent/MetadataCardContent.mdx
@@ -43,7 +43,7 @@ class Basic extends lng.Component {
         w: 600,
         h: 250,
         title: 'Title',
-        subheading: 'Subtitle',
+        subtitle: 'Subtitle',
         description: 'Description',
         details: 'Details',
         provider: {
@@ -63,7 +63,7 @@ class Basic extends lng.Component {
 | name               | type                                                  | required | default   | description                                                                               |
 | ------------------ | ----------------------------------------------------- | -------- | --------- | ----------------------------------------------------------------------------------------- |
 | title              | string                                                | false    | undefined | title text                                                                                |
-| subheading         | string                                                | false    | undefined | subheading text                                                                           |
+| subtitle           | string                                                | false    | undefined | subtitle text                                                                             |
 | description        | string                                                | false    | undefined | description text directly below title                                                     |
 | descriptionDetails | string                                                | false    | undefined | details text directly below description                                                   |
 | details            | string                                                | false    | undefined | details text at bottom left of component                                                  |
