fix:update snapshots

--- a/packages/@lightningjs/ui-components/src/components/MetadataBase/MetadataBase.mdx
+++ b/packages/@lightningjs/ui-components/src/components/MetadataBase/MetadataBase.mdx
@@ -47,6 +47,7 @@ class Example extends lng.Component {
         w: 400,
         h: 300,
         title: 'Title',
+        subtitle: 'Subtitle',
         details: [
           '94%',
           {
@@ -76,6 +77,7 @@ class Example extends lng.Component {
 
 | name         | type           | required             | default   | description                                  |
 | ------------ | -------------- | -------------------- | --------- | -------------------------------------------- |
+| subtitle     | string         | false                | undefined | subtitle text                                |
 | description  | string         | false                | undefined | third line or description of the content     |
 | details      | inline content | false                | undefined | relevant content data in the middle          |
 | logo         | string         | false                | undefined | logo to display at bottom of component       |
