fix(Tab): tab padding properties match Button properties

--- a/packages/@lightningjs/ui-components/src/components/TabBar/Tab.mdx
+++ b/packages/@lightningjs/ui-components/src/components/TabBar/Tab.mdx
@@ -69,7 +69,7 @@ class Example extends lng.Component {
 | contentColor    | string           | color of icon and/or text                                                                                                                                                                                                                                                                                                                                                                                                                            |
 | iconMarginRight | number           | space between icon and text                                                                                                                                                                                                                                                                                                                                                                                                                          |
 | iconSize        | number           | width and height of icon                                                                                                                                                                                                                                                                                                                                                                                                                             |
-| noTitlePaddingX | number           | horizontal padding of tab when only an icon is rendered                                                                                                                                                                                                                                                                                                                                                                                              |
+| paddingXNoTitle | number           | horizontal padding of tab when only an icon is rendered                                                                                                                                                                                                                                                                                                                                                                                              |
 | paddingX        | number           | horizontal padding of tab                                                                                                                                                                                                                                                                                                                                                                                                                            |
 | paddingY        | number           | vertical padding of tab                                                                                                                                                                                                                                                                                                                                                                                                                              |
 | radius          | number           | border radius of tab                                                                                                                                                                                                                                                                                                                                                                                                                                 |
