fix(Hyperlinks): links navigate to correct paths

--- a/packages/@lightningjs/ui-components/src/components/Column/Column.mdx
+++ b/packages/@lightningjs/ui-components/src/components/Column/Column.mdx
@@ -29,7 +29,7 @@ Focus management and smooth scrolling for a list of vertically-oriented items.
 
 ## Source
 
-https://github.com/rdkcentral/Lightning-UI-Components/blob/develop/packages/@lightningjs/ui-components/src/components/Column/Column.js
+https://github.com/rdkcentral/Lightning-UI-Components/blob/develop/packages/%40lightningjs/ui-components/src/components/Column/Column.js
 
 ## Usage
 
@@ -56,7 +56,7 @@ class BasicExample extends lng.Component {
 }
 ```
 
-The `Column` component extends [FocusManager](?path=/docs/components-focusmanager--column-with-rows), so you need to make sure that `_getFocused` returns the `Column` component.
+The `Column` component extends [FocusManager](?path=/docs/components-focusmanager--docs), so you need to make sure that `_getFocused` returns the `Column` component.
 
 ### Column items with changing height
 
@@ -121,7 +121,7 @@ If both of those properties are enabled, `alwaysScroll` will take precedence ove
 
 ### Style Properties
 
-The Column component shares a few of the same style properties as the ones listed in NavigationManager. For a detailed description, please refer to style properties section in the [NavigationManager component](?path=/docs/components-navigationmanager--row)
+The Column component shares a few of the same style properties as the ones listed in NavigationManager. For a detailed description, please refer to style properties section in the [NavigationManager component](?path=/docs/components-navigationmanager--docs)
 
 scrollIndex: number
 itemSpacing: number
@@ -139,7 +139,7 @@ The `Column` component will utilize the following properties on each individual 
 
 ### Methods
 
-The Column component is a subclass of NavigationManager and FocusManager, so inherits all methods from those parent components. These shared methods are already documented in the NavigationManager and FocusManager documentation. For detailed descriptions of these methods, please refer to the methods section in the [NavigationManager](/?path=/docs/components-navigationmanager--row) and [FocusManager](/docs/components-focusmanager--column-with-rows) documentation.
+The Column component is a subclass of NavigationManager and FocusManager, so inherits all methods from those parent components. These shared methods are already documented in the NavigationManager and FocusManager documentation. For detailed descriptions of these methods, please refer to the methods section in the [NavigationManager](?path=/docs/components-navigationmanager--docs) and [FocusManager](?path=/docs/components-focusmanager--docs) documentation.
 
 #### onScreenEffect(): void
 
