--- a/packages/@lightningjs/ui-components/src/mixins/withLayout/withLayout.mdx
+++ b/packages/@lightningjs/ui-components/src/mixins/withLayout/withLayout.mdx
@@ -32,7 +32,7 @@ https://github.com/rdkcentral/Lightning-UI-Components/blob/develop/packages/@lig
 
 ## Usage
 
-Let's use an example to see how we can use `withLayout`. Let's say I have an a `Tile` component on screen that should be sized according the screen size:
+Let's use an example to see how we can use `withLayout`. Let's say I have a `Tile` component on screen that should be sized according the screen size:
 
 ```js
 import lng from '@lightningjs/core';
