--- a/packages/@lightningjs/ui-components/src/mixins/withTags/withTags.mdx
+++ b/packages/@lightningjs/ui-components/src/mixins/withTags/withTags.mdx
@@ -51,4 +51,4 @@ class Example extends withTags(lng.Component) {
 ```
 
 This example will create two helpers `this._Item` and `this._Image` which will
-return `this.tag('Item')` and `this.tag('Item.Image')` repectively.
+return `this.tag('Item')` and `this.tag('Item.Image')` respectively.
