--- a/packages/@lightningjs/ui-components/src/components/ControlRow/ControlRow.mdx
+++ b/packages/@lightningjs/ui-components/src/components/ControlRow/ControlRow.mdx
@@ -25,7 +25,7 @@ import * as ControlRowStories from './ControlRow.stories';
 <Title />
 
 The `ControlRow` component renders a
-[TitleRow](/docs/components-titlerow--basic) component with optional left controls content items, and right controls
+[TitleRow](?path=/docs/components-titlerow--docs) component with optional left controls content items, and right controls
 which are rendered as row items in that order.
 
 ## Source
@@ -34,7 +34,7 @@ https://github.com/rdkcentral/Lightning-UI-Components/blob/develop/packages/@lig
 
 ## Usage
 
-`ControlRow` accepts all [properties supported by TitleRow](/docs/components-titlerow--basic#properties)
+`ControlRow` accepts all [properties supported by TitleRow](?path=/docs/components-titlerow--docs#properties)
 as well as optional `leftControls`, `contentItems`, and `rightControls` properties.
 
 ```js
@@ -99,7 +99,7 @@ class LazyLoad extends lng.Component {
 
 ### Properties
 
-**`ControlRow` is a subclass of the [`TitleRow`](/docs/components-titlerow--basic)**,
+**`ControlRow` is a subclass of the [`TitleRow`](?path=/docs/components-titlerow--docs)**,
 so allows setting all properties that are available on `TitleRow`.
 
 | name             | type          | required | default         | description                                                                                   |
