--- a/packages/@lightningjs/ui-components/src/docs/ThemingComponentConfig.mdx
+++ b/packages/@lightningjs/ui-components/src/docs/ThemingComponentConfig.mdx
@@ -44,7 +44,7 @@ componentConfig: {
 
 ## Tones
 
-For a deeper dive on `tones`, see ["Tones"](../?path=/docs/docs-theming-tones--page).
+For a deeper dive on `tones`, see ["Tones"](?path=/docs/docs-theming-tones--docs).
 
 The `tone` property expects a string which will determine the default color palette to apply to a component. Unless you have created a custom tone, this string should match one of the following:
 
@@ -67,7 +67,7 @@ componentConfig: {
 
 ## Modes
 
-For a deeper dive on `modes`, see ["Modes"](../?path=/docs/docs-theming-modes--page).
+For a deeper dive on `modes`, see ["Modes"](?path=/docs/docs-theming-modes--docs).
 
 The `mode` property expects a string which will determine the default interaction state to apply to a component. By default, components are in the unfocused mode, but depending on the platform, can be switched into modes like:
 
