--- a/packages/@lightningjs/ui-components/src/docs/ThemingExtensions.mdx
+++ b/packages/@lightningjs/ui-components/src/docs/ThemingExtensions.mdx
@@ -28,7 +28,7 @@ The component library cannot account for every design imaginable. That's where e
 
 For example, let's say a `Tile` element needs to have a certain feature. An extension containing that feature can be created and added to the `Tile` element without the developer having to make an entirely new component.
 
-Overall, extensions make LUI as flexible with [theming](../?path=/story/docs-theming-overview--page) as possible.
+Overall, extensions make LUI as flexible with [theming](?path=/docs/docs-theming-overview--docs) as possible.
 
 ### `withExtensions` Mixin
 
