--- a/packages/@lightningjs/ui-components/src/docs/ThemingHierarchy.mdx
+++ b/packages/@lightningjs/ui-components/src/docs/ThemingHierarchy.mdx
@@ -30,7 +30,7 @@ The above flowchart serves to demonstrate how the different theming-related conc
 
 ## Component Style File
 
-A component's style file can consist of a base style object, a [tone style object](path=/docs/docs-theming-tone--page), and a [mode style object](path=/docs/docs-theming-mode--page). These three objects are deep merged, in that order, to create a single style object that serves as the foundation for the final component style object.
+A component's style file can consist of a base style object, a [tone style object](?path=/docs/docs-theming-tones--docs), and a [mode style object](?path=/docs/docs-theming-modes--docs). These three objects are deep merged, in that order, to create a single style object that serves as the foundation for the final component style object.
 
 ## Theme's _componentConfig_
 
@@ -38,7 +38,7 @@ Themes can have a `componentConfig` object that has nested component style objec
 
 ## In-line Component Style Overrides
 
-When utilizing components within your application, you can use [withThemeStyles](?path=/docs/utilities-withthemestyles--with-theme-styles) to override particular style values in just that use case. Those custom styles are deep-merged with the resulting object from the previous steps.
+When utilizing components within your application, you can use [withThemeStyles](?path=/docs/utilities-withthemestyles--docs) to override particular style values in just that use case. Those custom styles are deep-merged with the resulting object from the previous steps.
 
 ## Extensions
 
