--- a/packages/@lightningjs/ui-components/src/docs/ThemingStorybook.mdx
+++ b/packages/@lightningjs/ui-components/src/docs/ThemingStorybook.mdx
@@ -41,7 +41,7 @@ Choosing a theme target at a **global level** means that the theme values you ha
 
 Choosing a theme target at a **component level** means that every instance of a particular component type will use the new values set by the controls, but the changes will not affect other types of components referencing the same theme values.
 
-To learn more, check out ["Theming at a Global versus Component Level"](../?path=/story/docs-theming-overview--page#theming-at-a-global-versus-component-level).
+To learn more, check out ["Theming at a Global versus Component Level"](?path=/docs/docs-theming-overview--docs#theming-at-a-global-versus-component-level).
 
 ## Downloading JSON data
 
