--- a/packages/@lightningjs/ui-components/src/docs/ThemingSubTheming.mdx
+++ b/packages/@lightningjs/ui-components/src/docs/ThemingSubTheming.mdx
@@ -42,7 +42,7 @@ Likewise, if there are multiple elements to a page, we can set a certain element
 
 A sub-theme can't exist without a parent theme thus we first need to specify which theme our component(s) should be using.
 
-Refer to [theming](../?path=/story/docs-theming-overview--page) for how to set the theme.
+Refer to [theming](?path=/docs/docs-theming-overview--docs) for how to set the theme.
 
 > Reminder that without a specified theme, the Base open-source theme will be used by default.
 
