--- a/packages/@lightningjs/ui-components/src/docs/ThemingTone.mdx
+++ b/packages/@lightningjs/ui-components/src/docs/ThemingTone.mdx
@@ -32,7 +32,7 @@ A component's tone can be set at the theme or component level. It is also possib
 
 ### Theme Level
 
-You may change the default tone across all LUI components by setting this value in your theme file's `componentConfig`. For a deeper dive on `tones`, see ["Component Config"](../?path=/docs/docs-theming-component-config--page).
+You may change the default tone across all LUI components by setting this value in your theme file's `componentConfig`. For a deeper dive on `tones`, see ["Component Config"](?path=/docs/docs-theming-component-config--docs).
 
 For example, if you want to use a brand tone on all `ProgressBar` components, add ProgressBar's tone to `componentConfig`:
 
