--- a/packages/apps/lightning-ui-docs/src/Contributing.mdx
+++ b/packages/apps/lightning-ui-docs/src/Contributing.mdx
@@ -54,7 +54,7 @@ The following is a set of guidelines for contributing to `@lightningjs/ui-compon
 
 **Documentation**
 
-- [See the README for setup help](../?path=/story/docs-read-me--page)
+- [See the README for setup help](?path=/docs/docs-read-me--docs)
 - [See Storybook for component docs with live examples](https://rdkcentral.github.io/Lightning-UI-Components/)
 
 **Discuss on Slack**
