--- a/packages/@lightningjs/ui-components/src/components/Shadow/Shadow.mdx
+++ b/packages/@lightningjs/ui-components/src/components/Shadow/Shadow.mdx
@@ -32,7 +32,7 @@ https://github.com/rdkcentral/Lightning-UI-Components/blob/develop/packages/@lig
 
 ## Usage
 
-Can be applied manaully or at the theme via the DropShadow.extension.
+Can be applied manually or at the theme via the DropShadow.extension.
 The `maskShadow` property is available to cut out the shape of the component
 from the shadow, but requires an additional draw call.
 
