feat(Storybook): upgrade to v8

--- a/packages/@lightningjs/ui-components/src/docs/Storybook.mdx
+++ b/packages/@lightningjs/ui-components/src/docs/Storybook.mdx
@@ -71,7 +71,7 @@ Specifically, `useArgs` has a method called `updateArgs` that can be used to upd
 Below is an example of how to use `updateArgs` along with the value property:
 
 ```js
-import { useArgs } from '@storybook/client-api';
+import { useArgs } from '@storybook/manager-api';
 
 const [{ value }, updateArgs] = useArgs();
 
