fix: doc updates
Co-authored-by: Carolyn Moneymaker <moneymaker.carolyn@gmail.com>

--- a/packages/@lightningjs/ui-components/src/docs/ThemingMode.mdx
+++ b/packages/@lightningjs/ui-components/src/docs/ThemingMode.mdx
@@ -36,7 +36,7 @@ By default each component will attempt to find a `focused` mode when thte compon
 
 ### Theme Level
 
-You can set any component's default mode by specifying it in the `componentConfig` property of your theme. For a deeper dive on `tones`, see ["Component Config"](?path=/docs/docs-theming-component-config--docs).
+You can set any component's default mode by specifying it in the `componentConfig` property of your theme. For a deeper dive on `modes`, see ["Component Config"](?path=/docs/docs-theming-component-config--docs).
 
 {/* prettier-ignore */}
 ```js 
