fix(docs): clean up links in docs (#525)
* fix(docs): clean up links in docs

* fix(docs): fix typos

* fix: doc updates

Co-authored-by: Carolyn Moneymaker <moneymaker.carolyn@gmail.com>

---------

Co-authored-by: Carolyn Moneymaker <moneymaker.carolyn@gmail.com>

--- a/packages/@lightningjs/ui-components/src/components/Row/Row.mdx
+++ b/packages/@lightningjs/ui-components/src/components/Row/Row.mdx
@@ -75,7 +75,7 @@ If multiple of these properties are enabled, the order of precedence from highes
 
 ### Style Properties
 
-The Row component shares the same style properties as the ones listed in NavigationManager. For a detailed description, please refer to style properties section in the [NavigationManager component](?path=/docs/components-navigationmanager--row)
+The Row component shares the same style properties as the ones listed in NavigationManager. For a detailed description, please refer to style properties section in the [NavigationManager component](?path=/docs/components-navigationmanager--docs#style-properties)
 
 ### Child Item Properties
 
