--- a/packages/@lightningjs/ui-components/src/components/MetadataBase/MetadataBase.mdx
+++ b/packages/@lightningjs/ui-components/src/components/MetadataBase/MetadataBase.mdx
@@ -77,7 +77,6 @@ class Example extends lng.Component {
 
 | name         | type           | required             | default   | description                                  |
 | ------------ | -------------- | -------------------- | --------- | -------------------------------------------- |
-| subtitle     | string         | false                | undefined | subtitle text                                |
 | description  | string         | false                | undefined | third line or description of the content     |
 | details      | inline content | false                | undefined | relevant content data in the middle          |
 | logo         | string         | false                | undefined | logo to display at bottom of component       |
@@ -85,6 +84,7 @@ class Example extends lng.Component {
 | logoPosition | string         | false                | 'right'   | which side to place logo (`right` or `left`) |
 | logoTitle    | string         | true (if using logo) | undefined | title of logo to use for announcer           |
 | logoWidth    | number         | true (if using logo) | undefined | width of logo                                |
+| subtitle     | string         | false                | undefined | subtitle text                                |
 | title        | string         | false                | undefined | first line or headline of the content        |
 
 ### Style Properties
@@ -97,6 +97,7 @@ class Example extends lng.Component {
 | logoHeight           | number           | height for logo                                                 |
 | logoPadding          | number           | spacing between logo and secondLine                             |
 | logoWidth            | number           | width for logo                                                  |
+| subtitleTextStyle    | string \| object | text style for subtitle                                         |
 | titleTextStyle       | string \| object | text style for title                                            |
 
 ### Methods
