fix(withThemeStylesDocs): doc missing Source section

--- a/packages/@lightningjs/ui-components/src/mixins/withThemeStyles/withThemeStyles.mdx
+++ b/packages/@lightningjs/ui-components/src/mixins/withThemeStyles/withThemeStyles.mdx
@@ -28,6 +28,10 @@ Use `withThemeStyles` to create composable components that can be easily themed 
 
 The `withThemeStyles` mixin provides flexibility with _composability_: the concept of combining the properties of multiple components to create a new component. This is not intended to be a replacement for building a component API, but rather a tool for augmentation.
 
+## Source
+
+https://github.com/rdkcentral/Lightning-UI-Components/blob/develop/packages/@lightningjs/ui-components/src/mixins/withThemeStyles/index.js
+
 ## Usage
 
 Here is an example of applying `withThemeStyles`. Start with an un-styled `Box` component containing a defined width and height.
